Grafana/grafana-deployment.yml
#Esse é o service responsavel por liberar a porta de acesso aos serviço Grafana dentro do cluster
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  selector:
    app: grafana
  type: LoadBalancer
  ports:
    - port: 3000
      nodePort: 30000
---
#Aqui estamos fazendo o deploy do grafana dentro de 2 replicas
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: grafana
  name: grafana
spec:  
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      securityContext:
        fsGroup: 472
        supplementalGroups:
          - 0
      containers:
        - name: grafana
          image: grafana/grafana:8.2.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http-grafana
              protocol: TCP
          resources:
            limits:
              memory: "1Gi"
              cpu: "1000m"
          #LOCAL ONDE REALIZAREMOS AS CONFIGURAÇÕES DE VOLUME DENTRO DOS CONTAINERES
          volumeMounts:
            - name: grafanalibs-pv  
              mountPath: /var/lib/grafana
            - name: grafana-ini
              mountPath: /etc/grafana/grafana.ini
              subPath: grafana.ini
            - name: grafana-ldap
              mountPath: /etc/grafana/ldap.toml
              subPath: ldap.toml

      #AQUI NOS COLOCAMOS O VOLUME CLAIM QUE É AQUELE CONFIGURADO PARA FAZER A SOLICITACAO DE UM VOLUME PERSISTENTE #EXISTENTE PARA FORA DO CONTAINER
      volumes:
        - name: grafanalibs-pv
          persistentVolumeClaim:
            claimName: grafana-pvc
        - name: grafana-ini
          configMap:
            name: grafana-config
        - name: grafana-ldap
          configMap:
            name: grafana-config
